feat: 리소스 사용량 측정 코드 추가